fix(misc): copy button component - show "copied" message on mobile devices (#344)

--- a/astro_2.0/components/CopyButton/CopyButton.module.scss
+++ b/astro_2.0/components/CopyButton/CopyButton.module.scss
@@ -11,11 +11,3 @@
     color: var(--color-primary-50);
   }
 }
-
-.popup {
-  display: none;
-
-  @include non-touch-devices {
-    display: block;
-  }
-}
